lab/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
