lab/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels: { app: portfolio }
  template:
    metadata:
      labels: {app: portfolio}
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: portfolio
          image: "REPLACED BY PIPELINE"
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"]}
          resources:
            requests: {cpu: 10m, memory: 32Mi}
            limits: {memory: 64Mi}
          readinessProbe:
            httpGet: {path: /healthz, port: 8080}
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: {path: /healthz, port: 8080}
            initialDelaySeconds: 10
            periodSeconds: 20
          volumeMounts:
            - { name: cache, mountPath: /var/cache/nginx }
            - { name: run, mountPath: /var/run}
            - { name: tmp, mountPath: /tmp}
      volumes:
        - {name: cache, emptyDir: {}}
        - {name: run, emptyDir: {}}
        - {name: tmp, emptyDir: {}}
