lab/k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: portfolio-gateway
    namespace: gateway-system
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
        service.beta.kubernetes.io/azure-pip-name: pip-portfolio-gateway
        service.beta.kubernetes.io/azure-load-balancer-resource-group: rg-tfstate
spec:
    gatewayClassName: approuting-istio
    listeners:
        - name: http
          protocol: HTTP
          port: 80
          hostname: krahler.com
          allowedRoutes: { namespaces: { from: All } }
        - name: https
          protocol: HTTPS
          port: 443
          hostname: krahler.com
          tls:
              mode: Terminate
              certificateRefs:
                  - { kind: Secret, name: portfolio-tls }
          allowedRoutes: { namespaces: { from: All } }
